resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: portfolio
spec:
  defaultBackend:
    service:
      name: portfolio
      port:
        number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: us-central1-docker.pkg.dev/astute-baton-430219-i9/portfolio/app:latest
          ports:
            - containerPort: 3000
